create user model

--- a/local.env
+++ b/local.env
@@ -3,3 +3,4 @@ PORT = <YOUR_PORT>
 MONGO_URI = <YOUR_MONGO_STRING>
 SESSION_SECRET = <YOUR_SESSION_SECRET>
 SESSION_COLLECTION_NAME = <YOUR_SESSION_NAME>
+SALT = <YOUR_SALT>
